Section 3 also rewritten accordingly

--- a/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
+++ b/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP3czKdumFk5iXOt2f+oAG3",
+      "authorship_tag": "ABX9TyNIAjH0kPFHw/rD73yD2vz2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1257,13 +1257,13 @@
       "source": [
         "# 3. Section 3: Algorithms\n",
         "\n",
-        "This section compares two baseline clustering algorithms, K-Means and Agglomerative Clustering applied to TF-IDF vectors. These algorithms were selected because they reflect standard approaches for short-text clustering, cover different modelling assumptions.\n",
+        "This section compares two baseline clustering algorithms, K-Means and Agglomerative Clustering—applied to the TF-IDF representations created earlier. This study applies them to real short-text data and analysing their behaviour under different modelling assumptions.\n",
         "\n",
-        "K-Means serves as the primary baseline due to its scalability and effectiveness for high-dimensional vector spaces. It partitions data into k groups by minimising within-cluster variance, using iterative refinement of centroids. With TF-IDF vectors, the default L2 normalisation ensures that Euclidean distance behaves similarly to cosine distance, which is more suitable for text. K-Means is therefore a strong and interpretable method for identifying compact clusters based on frequent lexical patterns. It also allows inspection of top TF-IDF terms per cluster, providing insight into the words that drive each grouping.\n",
+        "K-Means is used as the primary baseline because it scales well to large, high-dimensional datasets such as sparse TF-IDF vectors. It assumes that clusters are roughly spherical around a centroid and partitions the data by minimising within-cluster variance. With L2-normalised TF-IDF, Euclidean distance approximates cosine similarity, making K-Means effective for identifying groups of titles that share dominant lexical patterns. The model is also easy to interpret, as cluster centroids can be inspected to reveal high weight terms.\n",
         "\n",
-        "Agglomerative clustering forms a complementary baseline. Instead of optimising centroids, it builds clusters by repeatedly merging the closest pairs of samples or groups. This creates a hierarchical tree structure that reveals how clusters form at different granularities, which is useful for understanding relationships between product titles. The average linkage criterion was chosen because it represents the mean distance between clusters and often produces balanced merges for sparse data. A subset of the data is used due to the quadratic complexity of hierarchical clustering.\n",
+        "Agglomerative clustering provides a contrasting approach. Instead of relying on centroids, it is a hierarchical, distance-based method that successively merges the closest samples or clusters. This captures multi-level structure and can reveal fine-grained relationships between product titles, even when clusters are not spherical. Average linkage was selected because it produces stable merges for sparse text, but the method is computationally expensive, so it is applied only to a sampled subset.\n",
         "\n",
-        "These baselines represent two distinct approaches: K-Means focuses on partitioning and scalability, while Agglomerative Clustering emphasises structure and interpretability. By comparing both, this study establishes a robust foundation for evaluating the more advanced SBERT-based approach introduced in Section 6. Together, these models offer meaningful contrast in behaviour, performance, and cluster quality when applied to real-world product titles."
+        "Together, these algorithms offer complementary perspectives: K-Means provides efficient, coarse partitioning, while Agglomerative Clustering exposes hierarchical structure. Comparing both establishes a solid baseline for evaluating the semantic SBERT embeddings introduced in Section 6."
       ],
       "metadata": {
         "id": "p2f6vXGRZh3s"
@@ -1551,9 +1551,7 @@
       "source": [
         "## Evaluation Results\n",
         "\n",
-        "Both baseline models were evaluated using internal clustering metrics: the Silhouette coefficient and the Davies-Bouldin (DB) index. These metrics were selected because the dataset contains no ground-truth labels, making external evaluation measures such as accuracy or purity inappropriate.\n",
-        "\n",
-        "The Silhouette score assesses how well items match their assigned cluster compared to surrounding clusters, with higher values indicating clearer separation. The DB index measures average cluster similarity, where lower values correspond to more compact and distinct clusters.\n",
+        "Both baseline models were evaluated using internal clustering metrics: the Silhouette coefficient and the Davies-Bouldin (DB) index. These metrics were selected because the dataset contains no ground-truth labels, making external evaluation measures such as accuracy or purity inappropriate. The Silhouette score assesses how well items match their assigned cluster compared to surrounding clusters, with higher values indicating clearer separation. The DB index measures average cluster similarity, where lower values correspond to more compact and distinct clusters.\n",
         "\n",
         "K-Means achieved a Silhouette score of **0.081** and a DB index of **4.619**, while Agglomerative Clustering produced scores of **0.022** and **3.104**, respectively. These values indicate limited separation between clusters, which is expected for short, repetitive product titles where many items share brand or model keywords. K-Means offered slightly better separation, whereas hierarchical clustering produced marginally tighter clusters.\n",
         "\n",
@@ -1834,25 +1832,18 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Section 7: Analysis"
-      ],
-      "metadata": {
-        "id": "q8DbBboPq7lX"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
+        "# Section 7: Analysis\n",
+        "\n",
         "## Analysis of the Paper Implementation\n",
         "\n",
         "The SBERT implementation produced a Silhouette score of 0.116 and a Davies-Bouldin index of 3.406, which represents a noticeable improvement over both TF-IDF baselines (K-Means: 0.074 / 4.176; Agglomerative: 0.026 / 3.002). The higher Silhouette score indicates that SBERT embeddings yield clearer separation between clusters, and the lower Davies-Bouldin value reflects more compact groupings. This improvement is expected, as SBERT captures semantic meaning rather than relying on surface-level word overlap, allowing product titles with similar meaning but different wording to be grouped more effectively.\n",
         "\n",
         "However, the overall scores remain modest, especially when compared to the results reported in the SBERT paper. This discrepancy arises because the original paper evaluates performance using SentEval benchmarks such as STS correlation, NLI accuracy, and labelled clustering metrics (NMI, ARI, purity). These require ground-truth labels, which are not available in this dataset. Consequently, the exact evaluation used in the paper cannot be reproduced here. Internal clustering metrics—Silhouette and Davies-Bouldin—serve as the closest unsupervised equivalents for assessing cluster quality.\n",
         "\n",
-        "Overall, SBERT outperforms the TF-IDF baselines, but the dataset's short, repetitive product titles limit maximum separation. The results still demonstrate that semantic embeddings provide a meaningful improvement for unsupervised product clustering.\n"
+        "Overall, SBERT outperforms the TF-IDF baselines, but the dataset's short, repetitive product titles limit maximum separation. The results still demonstrate that semantic embeddings provide a meaningful improvement for unsupervised product clustering."
       ],
       "metadata": {
-        "id": "Q0MicSaIyc2-"
+        "id": "q8DbBboPq7lX"
       }
     },
     {
