--- a/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
+++ b/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNIAjH0kPFHw/rD73yD2vz2",
+      "authorship_tag": "ABX9TyNVoagPVVtqTfg+o0RlNeu7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1564,7 +1564,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Section 5: Paper Overview"
+        "# Section 5: Paper Overview\n",
+        "\n",
+        "This section reviews the paper **“Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks” by Reimers and Gurevych (2019)**. The paper highlights a key limitation of standard BERT: although it produces strong contextual token representations, its pooled sentence output is not suitable for direct similarity comparison. Standard BERT requires cross-encoding sentence pairs, which is accurate but far too slow for retrieval or clustering tasks.\n",
+        "\n",
+        "To address this, the authors introduce **Sentence-BERT (SBERT)**, which fine-tunes BERT using a Siamese and triplet network architecture. This approach learns sentence embeddings that place similar text closer together in vector space while separating dissimilar text. Because embeddings can be compared with a simple distance function, SBERT enables large scale similarity and clustering tasks that are over 100 times faster than cross encoded BERT.\n",
+        "\n",
+        "The paper demonstrates that SBERT consistently outperforms TF-IDF, averaged word embeddings, and vanilla BERT on semantic textual similarity and clustering benchmarks. The main contribution is showing that BERT can be adapted to produce reusable, semantically meaningful sentence-level vectors.\n",
+        "SBERT is relevant to this coursework because product titles often contain minor rephrasings or near-duplicates that TF-IDF struggles to represent. SBERT provides richer semantic representations, making it more effective for clustering similar product titles in this dataset."
       ],
       "metadata": {
         "id": "uNzzhn5ar2At"
@@ -1572,16 +1579,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "This section reviews the paper *“Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks”* by Reimers and Gurevych (2019), which introduces an enhanced method for generating meaningful sentence embeddings suitable for clustering and similarity-based NLP tasks. The authors identify a key limitation in the original BERT architecture: while BERT provides strong contextual representations, its pooled output cannot be directly used for efficient semantic similarity measurement. Moreover, computing similarity between two sentences with standard BERT requires cross-encoding, which is computationally expensive and unsuitable for large-scale retrieval or clustering.\n",
-        "\n",
-        "To address this, the paper proposes Sentence-BERT (SBERT), a Siamese and triplet network architecture that fine-tunes BERT to produce fixed-size sentence embeddings optimised for cosine similarity. By training the network with contrastive and triplet loss functions, SBERT learns to map semantically similar sentences closer together in vector space while pushing dissimilar ones apart. This modification enables rapid pairwise comparison, making SBERT up to 100 times faster than standard BERT for similarity tasks.\n",
-        "\n",
-        "The paper demonstrates substantial improvements over traditional representations such as TF-IDF, average word embeddings, and vanilla BERT on tasks including clustering, semantic search, and paraphrase detection. SBERT therefore provides a powerful, scalable method for generating high-quality semantic embeddings applicable to a wide range of NLP applications.\n",
-        "\n",
-        "In the context of this coursework, SBERT is relevant because product titles often contain paraphrastic or similar expressions semantically that cannot be fully captured using TF-IDF alone. By embedding titles into a semantic vector space, SBERT provides a richer representation that is well suited for clustering tasks involving subtle textual differences.\n",
-        "\n"
-      ],
+      "source": [],
       "metadata": {
         "id": "iwPq6ESFqpeL"
       }
@@ -1601,7 +1599,7 @@
         "## Section 6.1: Implementation of the Paper's Algorithm (SBERT)\n",
         "* SBERT provides semantic sentence embeddings, allowing clustering based on meaning rather than surface level word overlap.\n",
         "* This implementation below follows the method described in \"Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks\".\n",
-        "* Also uses the all-MiniLM-L6-v2 model, which is an officially released SBERT variant listed on the SentenceTransformers model page (https://www.sbert.net/docs/sentence_transformer/pretrained_models.html). Although the original SBERT paper evaluates models such as **bert-base-nli-mean-tokens** and **roberta-base-nli-stsb-mean-tokens**, the MiniLM versions does the same Siamese architecture described in the paper."
+        "* I make use of the all-MiniLM-L6-v2 model, which is an officially released SBERT variant listed on the SentenceTransformers model page (https://www.sbert.net/docs/sentence_transformer/pretrained_models.html). Although the original SBERT paper evaluates models such as **bert-base-nli-mean-tokens** and **roberta-base-nli-stsb-mean-tokens**, the MiniLM versions does the same Siamese architecture described in the paper."
       ],
       "metadata": {
         "id": "IltkVX00wx8o"
@@ -1836,11 +1834,12 @@
         "\n",
         "## Analysis of the Paper Implementation\n",
         "\n",
-        "The SBERT implementation produced a Silhouette score of 0.116 and a Davies-Bouldin index of 3.406, which represents a noticeable improvement over both TF-IDF baselines (K-Means: 0.074 / 4.176; Agglomerative: 0.026 / 3.002). The higher Silhouette score indicates that SBERT embeddings yield clearer separation between clusters, and the lower Davies-Bouldin value reflects more compact groupings. This improvement is expected, as SBERT captures semantic meaning rather than relying on surface-level word overlap, allowing product titles with similar meaning but different wording to be grouped more effectively.\n",
+        "The SBERT implementation produced a Silhouette score of **0.116** and a Davies-Bouldin index of 3.406, showing a clear improvement over both TF-IDF baselines **(K-Means: 0.074 / 4.176; Agglomerative: 0.026 / 3.002)**. This indicates that SBERT creates clusters with better separation and tighter internal cohesion. The improvement reflects SBERT's ability to model semantic similarity rather than relying purely on shared surface words. As a result, titles that use different wording for the same device for example, colour variations or reordered attributes are placed closer together in embedding space.\n",
         "\n",
-        "However, the overall scores remain modest, especially when compared to the results reported in the SBERT paper. This discrepancy arises because the original paper evaluates performance using SentEval benchmarks such as STS correlation, NLI accuracy, and labelled clustering metrics (NMI, ARI, purity). These require ground-truth labels, which are not available in this dataset. Consequently, the exact evaluation used in the paper cannot be reproduced here. Internal clustering metrics—Silhouette and Davies-Bouldin—serve as the closest unsupervised equivalents for assessing cluster quality.\n",
+        "Despite outperforming TF-IDF, the absolute scores remain modest. This is expected: product titles are extremely short, contain repeated brand terms, and often differ only by small numerical or stylistic tokens. These characteristics compress many items into the same region of the embedding space, making perfect separation unrealistic for any model.\n",
         "\n",
-        "Overall, SBERT outperforms the TF-IDF baselines, but the dataset's short, repetitive product titles limit maximum separation. The results still demonstrate that semantic embeddings provide a meaningful improvement for unsupervised product clustering."
+        "The SBERT results cannot be directly compared with those in the paper, as the original evaluation used labelled SentEval benchmarks such as STS and NLI, which are not available for this dataset. Internal clustering metrics provide the closest unsupervised alternative. A small manual STS-style evaluation also showed a positive correlation, supporting SBERT's semantic effectiveness.\n",
+        "Overall, SBERT improves cluster geometry and provides the strongest representation for this dataset."
       ],
       "metadata": {
         "id": "q8DbBboPq7lX"
@@ -1859,12 +1858,11 @@
       "cell_type": "markdown",
       "source": [
         "# Section 8 - Conclusion\n",
+        "This study applied unsupervised NLP techniques to cluster product titles, comparing traditional TF-IDF features with the SBERT sentence-embedding model. TF-IDF enabled K-Means and Agglomerative Clustering to form basic groups based on shared lexical patterns, but the resulting clusters showed limited separation due to the repetitive and short nature of the titles.\n",
         "\n",
-        "This study explored unsupervised clustering of product titles using both traditional NLP representations and a modern sentence-embedding model. TF-IDF provided a strong and interpretable baseline, enabling K-Means and Agglomerative Clustering to form groups based on shared lexical patterns. However, the baseline models were limited by the shallow nature of TF-IDF, resulting in modest cluster separation.\n",
+        "SBERT provided a clear improvement, producing more distinct and compact clusters. Its semantic embeddings captured relationships that TF-IDF could not, such as differently phrased or reordered product titles. Although the evaluation could not replicate the labelled SentEval benchmarks used in the original paper, internal metrics still demonstrated SBERT's superiority.\n",
         "\n",
-        "Implementing the SBERT model introduced in the selected paper demonstrated clear benefits. SBERT embeddings improved both the Silhouette score and Davies-Bouldin index, confirming that semantic representations capture deeper relationships between product titles than surface-level word overlap. Although the evaluation differs from the SentEval benchmarks used in the paper—due to the absence of labelled ground truth—the internal metrics still show SBERT's superiority for this dataset.\n",
-        "\n",
-        "Overall, the comparative study highlights the value of pretrained language models for real world clustering tasks and demonstrates how modern NLP techniques can enhance the organisation and analysis of unstructured product data.\n"
+        "Overall, the study shows how modern pretrained models significantly enhance clustering quality for real-world, unstructured product data"
       ],
       "metadata": {
         "id": "ByseXeWDBYGW"
