Final checks and runs done, and it all works

--- a/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
+++ b/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNVoagPVVtqTfg+o0RlNeu7",
+      "authorship_tag": "ABX9TyM4XLJOqWA5YdDfdEQkMtoc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -99,9 +99,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 358
         },
-        "outputId": "a67bbcd1-ac9e-4b50-c10f-b73a90fd1f87"
+        "outputId": "eb04139a-a5a3-4fac-ee82-618e60cfd8ea"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
@@ -111,9 +111,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-512cf154-1021-41ff-a4c6-fe662a2743d1\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-8d671b77-9fcf-4b75-9746-02e34c727e1f\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-512cf154-1021-41ff-a4c6-fe662a2743d1\">\n",
+              "     <output id=\"result-8d671b77-9fcf-4b75-9746-02e34c727e1f\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -332,7 +332,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-63f3195f-eaa1-47b9-bce4-02d859fb3166\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-a5372af1-f111-465d-95a8-14b7a151375c\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -417,7 +417,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-63f3195f-eaa1-47b9-bce4-02d859fb3166')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a5372af1-f111-465d-95a8-14b7a151375c')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -469,12 +469,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-63f3195f-eaa1-47b9-bce4-02d859fb3166 button.colab-df-convert');\n",
+              "        document.querySelector('#df-a5372af1-f111-465d-95a8-14b7a151375c button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-63f3195f-eaa1-47b9-bce4-02d859fb3166');\n",
+              "        const element = document.querySelector('#df-a5372af1-f111-465d-95a8-14b7a151375c');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -494,8 +494,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-f2f3ac91-d6f4-4955-b8e6-52cea302a936\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f2f3ac91-d6f4-4955-b8e6-52cea302a936')\"\n",
+              "    <div id=\"df-d7719898-3f94-4138-966e-0ab44f27033c\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d7719898-3f94-4138-966e-0ab44f27033c')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -614,7 +614,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-f2f3ac91-d6f4-4955-b8e6-52cea302a936 button');\n",
+              "            document.querySelector('#df-d7719898-3f94-4138-966e-0ab44f27033c button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -631,19 +631,19 @@
             }
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 1
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "KDezaXXZD0dv",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1d225e30-3b6f-4c6b-becd-f945ad32526a"
+        "outputId": "97536dee-75b6-4864-fd65-9746485c313f"
       },
       "outputs": [
         {
@@ -739,9 +739,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4T3vuDjLuLrr",
-        "outputId": "1ff76fbe-4587-448b-ff53-f38b67ab8d8a"
+        "outputId": "c06faca0-908d-406f-8554-a1b87bccd5fc"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -788,7 +788,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AUZJd1fYtOFC",
-        "outputId": "c2e039a0-f230-419f-9edc-af41edcd2570"
+        "outputId": "f5de2b8a-0305-4f35-bfd3-3cefbbbfd6d1"
       },
       "execution_count": 5,
       "outputs": [
@@ -844,7 +844,7 @@
       ],
       "metadata": {
         "id": "1qU3qYUIqq20",
-        "outputId": "5354b508-25c4-479d-c58a-54e9ff7f9a8b",
+        "outputId": "68b8650e-6bbf-47ea-c28a-d785b0edcd85",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 410
@@ -891,7 +891,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8f765893-b3bf-415b-973c-8a7eeee79a5d\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-f3c8f410-83b8-42d8-94a8-9f9c92e7e2d6\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -971,7 +971,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8f765893-b3bf-415b-973c-8a7eeee79a5d')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f3c8f410-83b8-42d8-94a8-9f9c92e7e2d6')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1023,12 +1023,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-8f765893-b3bf-415b-973c-8a7eeee79a5d button.colab-df-convert');\n",
+              "        document.querySelector('#df-f3c8f410-83b8-42d8-94a8-9f9c92e7e2d6 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-8f765893-b3bf-415b-973c-8a7eeee79a5d');\n",
+              "        const element = document.querySelector('#df-f3c8f410-83b8-42d8-94a8-9f9c92e7e2d6');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1048,8 +1048,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-ee65e198-9b4d-475e-95c3-a4708a971343\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ee65e198-9b4d-475e-95c3-a4708a971343')\"\n",
+              "    <div id=\"df-ee45e946-840f-4690-8254-0ee73b0a2bd5\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ee45e946-840f-4690-8254-0ee73b0a2bd5')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1168,7 +1168,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-ee65e198-9b4d-475e-95c3-a4708a971343 button');\n",
+              "            document.querySelector('#df-ee45e946-840f-4690-8254-0ee73b0a2bd5 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1237,7 +1237,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "463fa7f5-4d10-4a81-e1b0-6e217a263ffc"
+        "outputId": "90505014-6f60-4304-b074-74a28f8c11bc"
       },
       "execution_count": 7,
       "outputs": [
@@ -1289,7 +1289,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pVBjabAV8EuK",
-        "outputId": "f1f3e5fc-83bf-4db9-e0f9-c123fcfcdfa6"
+        "outputId": "7461f3b8-94cd-436a-e852-42cc8cc0b989"
       },
       "execution_count": 8,
       "outputs": [
@@ -1336,7 +1336,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a9c4734f-ae59-4852-a979-998d8c4562af"
+        "outputId": "c1d1a861-0a27-466a-826b-fcf115431282"
       },
       "execution_count": 9,
       "outputs": [
@@ -1375,7 +1375,7 @@
         "nonzero_idx = np.where(X_sample.getnnz(axis=1) > 0)[0]\n",
         "X_sample = X_sample[nonzero_idx]\n",
         "\n",
-        "# L2 - normalise the sample so Euclidean distance - cosine distance\n",
+        "# L2 normalise the sample so Euclidean distance - cosine distance\n",
         "X_sample_norm = normalize(X_sample, norm='l2', copy=False)\n",
         "\n",
         "# create Agglomerative clustering model\n",
@@ -1397,9 +1397,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2f1ee2e3-6ccf-4b11-d9ef-e5fc980d67ae"
+        "outputId": "b8203e06-72f9-43e7-dcf8-b95233cb2612"
       },
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -1455,7 +1455,7 @@
           "height": 957
         },
         "id": "KIta-oXW50xh",
-        "outputId": "c868e2fe-3da8-40bd-cc5c-6478ce5d05dd"
+        "outputId": "b44b00b0-f67e-4bc4-cd71-0066705cadb2"
       },
       "execution_count": 12,
       "outputs": [
@@ -1532,7 +1532,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j1mWL1w9DPVe",
-        "outputId": "75ed35e6-7edc-4828-d3f9-f3a5888758e5"
+        "outputId": "b91e8627-d6a9-4ce9-e45c-fd27266eae4c"
       },
       "execution_count": 13,
       "outputs": [
@@ -1579,13 +1579,6 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "iwPq6ESFqpeL"
-      }
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "# Section 6: Algorithms"
       ],
@@ -1610,12 +1603,12 @@
       "source": [
         "!pip install -q sentence-transformers\n",
         "\n",
+        "#imports\n",
         "from sentence_transformers import SentenceTransformer\n",
         "from sklearn.cluster import KMeans\n",
         "import numpy as np\n",
         "import os\n",
         "os.environ[\"HF_HUB_DISABLE_PROGRESS_BARS\"] = \"1\"\n",
-        "\n",
         "\n",
         "# Load pretrained SBERT model (using MiniLM as it is lightweight and fast)\n",
         "sbert_model = SentenceTransformer(\"all-MiniLM-L6-v2\")\n",
@@ -1640,9 +1633,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b2f98cae-9787-4f01-ec52-f688b500700c"
+        "outputId": "13673e31-8f9b-4752-f99d-663d96b8d00f"
       },
-      "execution_count": 17,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -1666,9 +1659,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Rc8l5hZXhfg_",
-        "outputId": "dfa6351b-b5a2-4a27-c47c-927404114393"
+        "outputId": "b166a0f4-69af-447f-ef05-f51818c45215"
       },
-      "execution_count": 18,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1718,12 +1711,12 @@
       ],
       "metadata": {
         "id": "JYG2GJBiwkhK",
-        "outputId": "8c7b8cce-51b8-4f2b-f692-101ad10a8e2b",
+        "outputId": "b1851f91-65e9-41b5-9f30-f6740ebd6fa8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -1796,9 +1789,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dE6RK2n7VNxF",
-        "outputId": "11a0a9e9-f431-4dbb-e738-345a5f2d8ac0"
+        "outputId": "45ee5691-ed58-424f-b9a7-3913b3ca4666"
       },
-      "execution_count": 20,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
